# HiScanner

./: .gitignore  LICENSE  MANIFEST.in  README.md  cli.py  config.py  pyproject.toml  requirements.txt  requiremets.txt  setup.py
archive_hiscanner_v1/: readme.md  run_step1.sh  run_step2.sh  run_step3.sh  run_step5.sh
archive_hiscanner_v1/scripts/: postprocess_utils.py  step2_getHetSnp.py  step3_evalADO.py  step5_inferCN.py
archive_hiscanner_v1/step4_segment/: Snakefile  cluster.yaml  config.yaml  example_usage.sh
docs/: contribution_guidelines.md  prepare_input.md
hiscanner/: __init__.py  __version__.py  cli.py  config.py  create_config.py  logger.py  tl.py
hiscanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
hiscanner/cli_tools/linux/: mbicseq
hiscanner/cli_tools/osx/: mbicseq
hiscanner/pipeline/: __init__.py  ado.py  cnv.py  multisample_segmentation.bak  normalization.py  phasing.py  segmentation.py  snp_calling.py  workflow.py
hiscanner/resources/: Snakefile  cluster.yaml  cluster_config.yaml  default_config.yaml  example_scan2.sh
hiscanner/resources/tools/singlesample_norm/: NBICseq-norm.pl
hiscanner/resources/tools/singlesample_norm/BRS_1bp/: BRS
hiscanner/resources/tools/singlesample_norm/DataPrepare/: PrepPois
hiscanner/resources/tools/singlesample_norm/DataPrepareGAM/: PrepPoisGAM
hiscanner/resources/tools/singlesample_norm/Filter/: filterCNV
hiscanner/resources/tools/singlesample_norm/combineFile/: combineFile
hiscanner/resources/tools/singlesample_norm/purityEM/: purityEM
hiscanner/resources/tools/singlesample_norm/randomSample/: random_split
hiscanner/resources/tools/singlesample_seg/EstimateLambdaFactor/: EstLambdaFct
hiscanner/resources/tools/singlesample_seg/bootstrap/: bootstrapTest
hiscanner/resources/tools/singlesample_seg/combineFile/: combineFile
hiscanner/resources/tools/singlesample_seg/genotype/: countRead  genotype
hiscanner/src/: mbic-seq.c
hiscanner/utils/: __init__.py  postprocessing.py  postprocessing_rdr.py  preprocessing.py  visualization.py
scanner/: __init__.py  pl.py  pp.py  tl.py  utils.py
scanner/src/: bin.c  bin.h
scripts/mbicseq-norm/: News
scripts/mbicseq-norm/BRS_1bp/: BRS
scripts/mbicseq-norm/DataPrepare/: PrepPois
scripts/mbicseq-norm/DataPrepareGAM/: DtaPrepGAM.c  PrepPoisGAM
scripts/mbicseq-norm/Filter/: filterCNV
scripts/mbicseq-norm/R/: purity.R
scripts/mbicseq-norm/R/oldR_Programe/: purity.R
scripts/mbicseq-norm/combineFile/: combineFile
scripts/mbicseq-norm/purityEM/: purityEM
scripts/mbicseq-norm/randomSample/: random_split  split.c
scripts_for_snakemake/: pipeline_rough_draft.md  run_bicseqnorm.sh  run_scansnv.sh
tests/: test_basic.py  test_cli.py  test_pp.py
