[tool.poetry]
name = "hiscanner"
version = "0.2b5"
description = "High-resolution single-cell copy number analysis."
authors = ["Yifan Zhao <yifnzhao@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "hiscanner" }
]
include = [
    "hiscanner/resources/*.yaml",
    "hiscanner/resources/Snakefile"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
keywords = ["bioinformatics", "single-cell", "cnv", "genomics"]

[tool.poetry.dependencies]
python = ">=3.8"
numpy = ">=1.20.0"
pandas = ">=1.3.0"
scipy = ">=1.9.3"
scikit-learn = ">=1.0.0"
hmmlearn = ">=0.2.7"
pysam = ">=0.16.0"
matplotlib = ">=3.4.0"
seaborn = ">=0.11.0"
pyyaml = ">=5.4.0"
click = ">=8.0.0"
colorlog = ">=6.0.0"
pyfaidx = ">=0.6.0"
tqdm = ">=4.62.0"
joblib = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.0"
pytest-cov = ">=2.0"
black = ">=22.0"
flake8 = ">=3.9"
mypy = ">=0.910"
isort = ">=5.9"

[tool.poetry.urls]
Homepage = "https://github.com/parklab/hiscanner"
Documentation = "https://github.com/parklab/hiscanner#readme"
Repository = "https://github.com/parklab/hiscanner.git"
Changelog = "https://github.com/parklab/hiscanner/blob/main/CHANGELOG.md"

[tool.poetry.scripts]
hiscanner = "hiscanner.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"